userprofile saves to db, did a little formatting, make quill more ridiculous and fun, and tried to get the add to story button working but i need some sleep

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -67,44 +67,15 @@
 }
 
 /* dark mode! */
-
-/* .dark-mode {
-  background-color: #333333;
+/* 
+.dark-mode {
+  background-color: grey;
   color: white;
 }
 
 .dark-mode .fa-solid.fa-user {
   color: white;
-}
-.dark-mode .logout-btn {
-  color: white;
-}
-
-.dark-mode .nav-link {
-  color: white;
-}
-
-.dark-mode .card-body {
-  background-color: #333333;
-}
-
-.dark-mode .card {
-  border-color: white;
-  border-width: 3px;
-}
-
-.dark-mode .card-body p,
-.dark-mode .card-body h5,
-.dark-mode .card-body h6,
-.dark-mode h6 #userName {
-  color: white;
-}
-
-.dark-mode .card-link {
-  color: white;
-  text-decoration: underline;
 } */
-
 
 @media screen and (max-width: 768px) {
   .card {
