--- a/views/viewStory.handlebars
+++ b/views/viewStory.handlebars
@@ -42,7 +42,13 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Go wild literary fiends!</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Add to this story:</h5>
+        <h5 class="card-title">Genre:
+        <h5 class="card-title mb-5" id="randomPrompt"><i>{{ genre.genre_title }}</i></h5>
+      </h5>
+      <h5 class="card-title">Prompt:
+        <h5 class="card-title mb-5" id="randomGenre"><i>{{ prompt.prompt_title }}</i></h5>
+      </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -83,3 +89,5 @@
     theme: 'snow'
   });
 </script>
+
+<script src="/js/createStory.js"></script>
