reformatted, deleted comments/unnecessary console.log() from code

--- a/views/adventureModeNew.handlebars
+++ b/views/adventureModeNew.handlebars
@@ -21,7 +21,8 @@
       <h5 class="card-title">Prompt:
         <h5 class="card-title mb-5" id="randomGenre"><i>{{ prompt.prompt_title }}</i></h5>
       </h5>
-      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalOpen" id="open-modal">Write a Story</a>
+      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalOpen"
+        id="open-modal">Write a Story</a>
     </div>
     <div class="card-footer text-body-secondary">
       Happy Writing
@@ -49,7 +50,9 @@
         <!-- Quill editor container -->
         <div id="editor">
           <p>Begin writing here!</p>
-          <p>Feel free to <strong>jazz it up</strong> <i>as you wish.</i><br>Nothing is <s>inconceivable</s><br><br><ins>Please note your work will only be saved on submit at the moment. Refreshing the page with restart the gameplay.</ins></p>
+          <p>Feel free to <strong>jazz it up</strong> <i>as you wish.</i><br>Nothing is
+            <s>inconceivable</s><br><br><ins>Please note your work will only be saved on submit at the moment.
+              Refreshing the page with restart the gameplay.</ins></p>
           <p><br /></p>
         </div>
       </div>
