--- a/views/viewStory.handlebars
+++ b/views/viewStory.handlebars
@@ -2,92 +2,93 @@
   <div class="row">
     <div class="col-md-12">
       <div class="col-md-12 d-flex justify-content-center">
-        <button type="button" class="btn btn-success mx-auto p-2" data-bs-toggle="modal" and data-bs-target="#exampleModalOpen">Add to this story?</button>
+        <button type="button" class="btn btn-success mx-auto p-2" data-bs-toggle="modal" and
+          data-bs-target="#exampleModalOpen">Add to this story?</button>
       </div>
 
       <h1>{{story.story_title}}</h1>
     </div>
   </div>
-    <div class="col-md-12">
-      <div class="card mb-3">
-        <div class="card-body">
-            {{#each story.segments}}
-          <p class="segment-text" text-indent="0px">{{{segment_content}}}</p>
-          {{/each}}
-        </div>
+  <div class="col-md-12">
+    <div class="card mb-3">
+      <div class="card-body">
+        {{#each story.segments}}
+        <p class="segment-text" text-indent="0px">{{{segment_content}}}</p>
+        {{/each}}
       </div>
     </div>
-  <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h3>Story Breakdown</h3>
-    </div>
   </div>
-  {{#each story.segments}}
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h3>Story Breakdown</h3>
+      </div>
+    </div>
+    {{#each story.segments}}
     <div class="col-md-12">
       <div class="card mb-3">
         <div class="card-body">
-        <h5 class="card-text">Segment {{position}}</h5>
+          <h5 class="card-text">Segment {{position}}</h5>
           <h6 class="card-title text-body-secondary">Genre: {{genre.genre_title}}</h6>
           <h6 class="card-title text-body-secondary">Prompt: {{prompt.prompt_title}}</h6>
-        <h6 class="card-title mb-2 text-body-secondary">Created By: {{user.username}}</h6>
+          <h6 class="card-title mb-2 text-body-secondary">Created By: {{user.username}}</h6>
           <p class="segment-text">{{{segment_content}}}</p>
         </div>
       </div>
     </div>
-  {{/each}}
-</div>
+    {{/each}}
+  </div>
 
-<div class="modal fade" id="exampleModalOpen" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Add to this story:</h5>
-        <h5 class="card-title">Genre:
-        <h5 class="card-title mb-5" id="randomPrompt"><i>{{ genre.genre_title }}</i></h5>
-      </h5>
-      <h5 class="card-title">Prompt:
-        <h5 class="card-title mb-5" id="randomGenre"><i>{{ prompt.prompt_title }}</i></h5>
-      </h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div>
-          <p>Story Title: 
-            <input type="text" id="storyTitle"></input>
-          </p>
+  <div class="modal fade" id="exampleModalOpen" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Add to this story:</h5>
+          <h5 class="card-title">Genre:
+            <h5 class="card-title mb-5" id="randomPrompt"><i>{{ genre.genre_title }}</i></h5>
+          </h5>
+          <h5 class="card-title">Prompt:
+            <h5 class="card-title mb-5" id="randomGenre"><i>{{ prompt.prompt_title }}</i></h5>
+          </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
+        <div class="modal-body">
+          <div>
+            <p>Story Title:
+              <input type="text" id="storyTitle"></input>
+            </p>
+          </div>
           <!-- Quill CSS link -->
           <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet" />
           <!-- Quill editor container -->
-        <div id="editor">
-          <p>Begin writing here!</p>
-          <p>Feel free to <strong>jazz it up</strong> as you wish</p>
-          <p><br /></p>
+          <div id="editor">
+            <p>Begin writing here!</p>
+            <p>Feel free to <strong>jazz it up</strong> as you wish</p>
+            <p><br /></p>
+          </div>
         </div>
-      </div>
-      <div class="modal-footer">
+        <div class="modal-footer">
           <button class="btn btn-primary" id="submit-segment">Submit</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
-  
+  <script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
+
   <!-- Initialize Quill editor -->
-<script>
-  const quill = new Quill('#editor', {
+  <script>
+    const quill = new Quill('#editor', {
       modules: {
-          history: {
-              delay: 1000,
-              maxStack: 500,
-              maxLength: 1500,
-              userOnly: true,
-          }
+        history: {
+          delay: 1000,
+          maxStack: 500,
+          maxLength: 1500,
+          userOnly: true,
+        }
       },
-    theme: 'snow'
-  });
-</script>
+      theme: 'snow'
+    });
+  </script>
 
-<script src="/js/createStory.js"></script>
+  <script src="/js/createStory.js"></script>
