--- a/views/registerUser.handlebars
+++ b/views/registerUser.handlebars
@@ -1,5 +1,6 @@
 <form id="registerForm" class="d-flex justify-content-center align-items-center" style="margin-top: 50px">
-  <div class="card text-center" style="width: 18rem; border: 2px solid #6c757d; border-radius: 20px; margin-top: 100px;">
+  <div class="card text-center"
+    style="width: 18rem; border: 2px solid #6c757d; border-radius: 20px; margin-top: 100px;">
     <div class="card-body">
       <h4 class="card-title pt-2 mb-2">Create a new account:</h4>
       <h6 class="card-subtitle fst-italic mb-4 mt-0 text-body-secondary">Please fill out the form below</h6>
@@ -7,13 +8,15 @@
         <label for="inputUsername">
           <h3>Username</h3>
         </label>
-        <input type="text" class="form-control" id="inputNewUsername" aria-describedby="usernameHelp" placeholder="Enter new username">
+        <input type="text" class="form-control" id="inputNewUsername" aria-describedby="usernameHelp"
+          placeholder="Enter new username">
       </div>
       <div style="padding: 20px;" class="form-group">
         <label for="inputEmail">
           <h3>Email address</h3>
         </label>
-        <input type="email" class="form-control" id="inputNewEmail" aria-describedby="emailHelp" placeholder="Enter new email">
+        <input type="email" class="form-control" id="inputNewEmail" aria-describedby="emailHelp"
+          placeholder="Enter new email">
       </div>
       <div class="justify-content-center align-items-center mt-3">
         <div class="text-center">
@@ -22,7 +25,8 @@
           </label>
         </div>
         <div class="col-auto">
-          <input type="password" id="inputNewPassword" class="form-control" aria-describedby="passwordHelpInline" placeholder="Enter new Password">
+          <input type="password" id="inputNewPassword" class="form-control" aria-describedby="passwordHelpInline"
+            placeholder="Enter new Password">
         </div>
         <div class="col-auto mt-3">
           <span id="passwordHelpInline" class="form-text">
