removed some unused buttons, updated README

--- a/views/createStory.handlebars
+++ b/views/createStory.handlebars
@@ -25,15 +25,15 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <h1 class="modal-title fs-5 text-center w-100" id="exampleModalLabel">Would
-                      you like to start a new story <br> or jump into an ongoing tale?</h1>
+                      you like to start a new story?</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
                     <div class="d-flex justify-content-center align-items-center w-100 p-5 g-5">
                       <a href="/createStory" type="button" class="btn btn-success mx-2"
                         id="adventure-mode-startnew">Start New</a>
-                      <a href="/" type="button" class="btn btn-primary mx-2" id="adventure-mode-ongoing">Join Ongoing
-                        Story</a>
+                      {{!-- <a href="/" type="button" class="btn btn-primary mx-2" id="adventure-mode-ongoing">Join Ongoing
+                        Story</a> --}}
                     </div>
                   </div>
                   <div class="modal-footer">
