--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,13 +19,11 @@
 
 <body>
   <div class="justify-content-center">
-
-    <!-- Nav Bar Below -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom mb-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <p class="navbar-brand">
           Story-Roulette <i class="fa-solid fa-dice"></i>
-        </a>
+        </p>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
